<resources>
    <string name="app_name">経路運賃営業キロ計算</string>
    <string name="title_main_view">経路指定</string>
    <string name="title_share_text">アプリ選択</string>
    <string name="query">確認</string>
    <string name="error">エラー</string>
    <string name="main_last_list_caption">追加…     ></string>
    <string name="main_alert_query_terminal_title">発駅選択</string>
    <string name="main_alert_query_terminal_mesg">表示している経路を破棄してもよろしいでしょうか？</string>
    <string name="main_alert_query_bullet">新幹線を使いますか？</string>
    <string name="main_head_caption">　発：　%1$s  %2$s</string>
    <string name="route_start_station_mark">　＞</string>
    <string name="title_back">経路戻り</string>
    <string name="title_reverse">リバース</string>
    <string name="title_oskkanrev">大阪環状線回り</string>
    <string name="title_footer_fare">普通運賃</string>
    <string name="title_footer_saleskm">営業キロ</string>
    <string name="title_footer_availday">有効日数</string>
    <string name="main_alert_query_left_route_overwrite_title">チケット経路選択</string>
    <string name="main_alert_query_left_route_overwrite_mesg">経路を選択した経路で更新してもよろしいでしょうか？</string>
    <string name="emsg_reverr">経路が重複している等反転できません</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title"><u>きっぷホルダ</u></string>
    <string name="nav_header_total_fare_title">総運賃</string>
    <string name="nav_header_total_fare">¥999,999-</string>
    <string name="nav_header_total_km_title">総営業キロ</string>
    <string name="nav_header_total_km">666,999.5km-</string>
    <string name="title_main_menu_archive">経路保存</string>
    <string name="title_main_menu_result">結果詳細</string>
    <string name="title_main_menu_settings">設定</string>
    <string name="title_main_menu_version">バージョン情報</string>
    <string name="title_version_info">経路運賃営業キロ計算</string>
    <string name="version_number">Farert %1$s(%2$d)</string>
    <string name="db_version_name">DB rev. %1$s版 %2$s\n消費税 %3$d%%</string>
    <string name="support_site_url"><a href="http://farert.blogspot.com/p/main.html">サポートサイト</a></string>
    <string name="support_site_url_body">http://farert.blogspot.com/p/main.html</string>
    <string name="welcome">ダウンロードありがとうございます</string>
    <string name="eula">本アプリで表示される結果は必ずしも正確な情報ではないことがありえます。実際の旅行での費用とは異なることがあり得ることをご理解の上ご利用ください。
本アプリにより発生したあらゆる損害は作者は負いません
不具合を見つけたらサポートサイトへご連絡ください</string>
    <string name="agree">了解</string>
    <string name="disagree">いいえ</string>
    <string name="title_version_close">OK</string>
    <string name="copyright">Copyright© Sutezo 2014–2022</string>
    <string name="btn_edit">編集</string>
    <string name="btn_del">削除</string>
    <string name="btn_add">追加&lt;&lt;</string>
    <string name="action_settings">Settings</string>
    <string name="should_select_terminal">発駅を選択してください</string>
    <string name="ttl_company">会社</string>
    <string name="ttl_prefect">都道府県</string>
    <string name="ttl_history">履歴</string>
    <string name="ttl_search">検索</string>
    <string name="term_menu_title">検索</string>
    <string name="tab_company">会社</string>
    <string name="tab_prefect">都道府県</string>
    <string name="tab_history">履歴</string>
    <string name="title_terminal_select_depart">発駅選択</string>
    <string name="title_terminal_select_arrive">着駅指定(最短経路)</string>
    <string name="title_station_select_arrive">着駅指定</string>
    <string name="title_station_select_junction">分岐駅指定</string>
    <string name="title_line_select_autoroute">最短経路</string>
    <string name="title_autoroute_selection">%1$sまでの最短経路</string>
    <string name="title_linelistactivity">路線選択</string>
    <string name="title_stationlistactivity">駅選択</string>
    <string name="label_search_title">駅名（よみ）入力</string>
    <string name="match_disp">一致件数：%1$d件</string>
    <string name="no_history">履歴はありません</string>
    <string name="menu_item_all_delete">全削除</string>
    <string name="title_activity_version">バージョン情報</string>
    <string name="title_activity_settings">設定</string>
    <string name="main_rc_finished">経路は終端に達しています</string>
    <string name="main_rc_neerested">すでに経路は最短となっています</string>
    <string name="main_rc_iregal_station">駅名</string>
    <string name="main_rc_iregal_line">路線名</string>
    <string name="main_rc_iregal_route">経路</string>
    <string name="main_rc_script_parse_error">不正な%1$sが含まれてましたので打ち切りました</string>
    <string name="main_rc_alert_title">経路エラー</string>
    <string name="main_rc_wrongcompany_pass">許可されていない会社線通過です.</string>
    <string name="main_rc_cantautostart">経路を算出できません.</string>
    <string name="main_rc_duplicate_route">経路が重複しているため追加できません.</string>
    <string name="main_rc_company_end">会社線利用路線はこれ以上追加できません</string>
    <string name="main_rc_auto_not_enough">開始駅へ戻るにはもう少し経路を指定してからにしてください</string>
    <string name="result_section">区間</string>
    <string name="result_kiro">キロ程</string>
    <string name="result_saleskm">営業キロ</string>
    <string name="result_kmval">79,999.9km</string>
    <string name="result_calckm">計算キロ(JR)</string>
    <string name="result_calckm_wo_jr">計算キロ</string>
    <string name="result_jrcompany_hokaido">JR北海道</string>
    <string name="result_jrcompany_east">JR東日本</string>
    <string name="result_jrcompany_west">JR西日本</string>
    <string name="result_jrcompany_central">JR東海</string>
    <string name="result_jrcompany_shikoku">JR四国</string>
    <string name="result_jrcompany_kyusyu">JR九州</string>
    <string name="result_rule114">規程114条適用</string>
    <string name="result_no_rule114_title_fare">規程114条 適用しない運賃</string>
    <string name="result_jrline">JR線</string>
    <string name="result_jr_brt_line">うちBRT線</string>
    <string name="result_comapanyline">会社線</string>
    <string name="result_brtline">BRT線</string>
    <string name="result_inbrtline">うちBRT線</string>
    <string name="result_brt_with_jr_line">JR線\nうちBRT線</string>
    <string name="two_line">%1$s\n%2$s</string>
    <string name="lf">\n</string>
    <string name="result_fare">運賃</string>
    <string name="result_specific_fare">特定区間運賃</string>
    <string name="result_normalfare">普通</string>
    <string name="result_normal_with_brt">普通\nBRT</string>
    <string name="result_companyfare">うち会社線</string>
    <string name="result_farevalue">¥84,558-</string>
    <string name="result_kmvalue">123,888km</string>
    <string name="result_round">往復</string>
    <string name="result_icfare">IC運賃</string>
    <string name="result_discount">(割引)</string>
    <string name="result_stockdiscount">JR東日本 株主優待2割:</string>
    <string name="result_chilefare">小児運賃:</string>
    <string name="result_studentdiscount">学割運賃:</string>
    <string name="result_availdays">有効日数</string>
    <string name="result_days">199日間</string>
    <string name="result_days_long">(発着駅都区市内の駅を除き途中下車可能)</string>
    <string name="result_days_metro1">近郊区間内ですので最安運賃の経路にしました</string>
    <string name="result_days_metro2">近郊区間内ですので最短経路の運賃で利用可能です</string>
    <string name="result_days_short">途中下車不可</string>
    <string name="result_via">経由</string>
    <string name="result_value_discount"> (割引)</string>
    <string name="blank">　</string>
    <string name="result_err_1">経路が不完全です.続けて指定してください</string>
    <string name="result_err_2">会社線のみ運賃は表示できません</string>
    <string name="result_err_other">運賃は表示できません</string>
    <string name="result_err_sameautoroute">開始駅=終了駅では最短経路は算出しません.</string>
    <string name="result_err_duproute">経路が重複するため指定できません</string>
    <string name="result_availday_except_begin_end">(発着駅都区市内の駅を除き</string>
    <string name="result_availday_except_begin">(発駅都区市内の駅を除き</string>
    <string name="result_availday_except_end">(着駅都区市内の駅を除き</string>
    <string name="result_availdays_fmt">%1$d日間</string>
    <string name="result_availday_empty">(</string>
    <string name="result_availday_stopover">%1$s途中下車可能)</string>
    <string name="result_availday_dontstopover">(途中下車前途無効)</string>
    <string name="result_note_company">会社線発着のため一枚の乗車券として発行されない場合があります.\n</string>
    <string name="result_note_multicompany">複数の会社線を跨っているため乗車券は通し発券できません. 運賃額も異なります.\n</string>
    <string name="result_note_jrtokaistock">JR東海株主優待券使用オプション選択可\n</string>
    <string name="result_menu_share">共有</string>
    <string name="result_menu_osakakan_far">大阪環状線遠回り</string>
    <string name="result_menu_osakakan_near">大阪環状線近回り</string>
    <string name="result_menu_neerest">最短経路</string>
    <string name="result_menu_meihancity_start">発駅を単駅とする</string>
    <string name="result_menu_meihancity_arrive">着駅を単駅とする</string>
    <string name="result_menu_sperule">特例を適用</string>
    <string name="result_menu_stocktokai">JR東海株主優待券を適用</string>
    <string name="action">する</string>
    <string name="nothing">しない</string>
    <string name="result_menu_longroute_long">指定した経路で運賃計算</string>
    <string name="result_menu_longroute_lowcost">最安経路で運賃計算</string>
    <string name="result_menu_rule115_city">旅客営業取扱基準規程115条(特定都区市内発着)</string>
    <string name="result_menu_rule115_station">旅客営業取扱基準規程115条(単駅最安)</string>
    <string name="result_value_section">%1$s → %2$s</string>
    <string name="result_km">%1$skm</string>
    <string name="result_yen">¥%1$s-</string>
    <string name="result_mailtitle_faredetail">運賃詳細</string>
    <string name="result_toica_calc_route">＜IC運賃計算経路＞</string>
    <string name="result_brt_discount">BRT乗継ぎ割引適用</string>
    <string name="menu_item_save">保存</string>
    <string name="menu_item_import">インポート</string>
    <string name="menu_item_export">エクスポート</string>
    <string name="main_alert_query_route_update_title">経路が保存されていません</string>
    <string name="main_alert_query_route_update_mesg">選択した経路を表示します.保存していない経路は破棄されます.よろしいでしょうか?</string>
    <string name="no_archive_route">保存された経路はありません</string>
    <string name="arch_title_over">保存された経路が多すぎますので、これ以上保存できません.\n新しい経路を保存するには、不要な経路を削除してください</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="arch_hide_specific_import">今後、この画面は表示せず、インポート機能を実行する</string>
    <string name="arch_title_import">インポートする経路をテキストで「メモ」等の外部エディタで作成してください\n(スペースまたはカンマ\',\'区切りで1行1経路)で指定します）\nその後、クリップボードへコピーして本機能を実行します.\nわからないという人は使用しないでください</string>
    <string name="main_alert_query_all_clear_title">確認</string>
    <string name="main_alert_query_all_clear_mesg">この操作は、すべての項目を削除します。また、元に戻すことはできませんがよろしいでしょうか？\n1行の削除はスワイプ操作でおこないます</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="select_autoroute_option">
        <item>在来線のみ</item>
        <item>新幹線を使う</item>
        <item>会社線を使う</item>
        <item>新幹線も会社線も使う"</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="setting_title_datasource">データソース</string>
    <string name="setting_descipt_datasource">駅、路線、運賃データを過去データで見ることもできます。通常は最新版を指定してください
また保持している経路は保存時のデータソース専用となりデータソースを切り替えると無効となり表示も不正になりますが保存時のデータソースに戻すと元どおりになります</string>
    <string name="setting_title_option">オプション</string>
    <string name="setting_title_kokura_shinkansen">小倉-博多間新幹線在来線別線扱い</string>
    <string name="setting_descr_kokura_shinkansen">経路は全て選択しなおしてください</string>
</resources>