<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/result_menu_share"
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_share_light"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:title="@string/result_menu_sperule"
        android:id="@+id/menu_specialrule"
        android:icon="@drawable/ic_specific_rule"
        app:showAsAction="never"
        />

    <item
        android:title="@string/result_menu_osakakan_far"
        android:id="@+id/menu_osakakan"
        android:icon="@drawable/ic_osakakan"
        app:showAsAction="never"
        />

    <item
        android:title="@string/result_menu_meihancity_arrive"
        android:id="@+id/menu_meihancity"
        android:icon="@drawable/ic_meihan_terminal"
        app:showAsAction="never"
        />

    <item
        android:title="@string/result_menu_neerest"
        android:id="@+id/menu_neerest"
        android:checkable="true"
        android:icon="@drawable/ic_autoroute"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_longroute"
        android:icon="@drawable/ic_stock_present"
        android:title="@string/result_menu_longroute_long"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_rule115"
        android:icon="@drawable/ic_stock_present"
        android:title="@string/result_menu_rule115_city"
        app:showAsAction="never"
        />
</menu>