<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/menu_item_all_delete"
        android:id="@+id/menu_item_all_delete"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        app:showAsAction="ifRoom"
        />
    <item
        android:title="@string/menu_item_save"
        android:id="@+id/menu_item_save"
        android:icon="@drawable/ic_system_update_alt_black_24dp"
        app:showAsAction="ifRoom"
        />

    <item
        android:title="@string/menu_item_import"
        android:id="@+id/menu_item_import"
        android:icon="@drawable/ic_input_black_24dp"
        app:showAsAction="ifRoom"
        />
    <item
        android:title="@string/menu_item_export"
        android:id="@+id/menu_item_export"
        android:icon="@drawable/ic_menu_share_light"
        app:showAsAction="ifRoom"
        />
</menu>