<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".VersionActivity"
    tools:showIn="@layout/activity_version">

    <TextView
        android:id="@+id/textViewVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        app:layout_anchorGravity="top|center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="94dp"
        android:text="@string/version_number" />

    <TextView
        android:id="@+id/textMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textDbVer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVer"
        app:layout_constraintVertical_bias="0.18"
        android:text="@string/title_version_info" />

    <TextView
        android:id="@+id/textDbVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/db_version_name"
        app:layout_constraintTop_toBottomOf="@+id/textMainTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="76dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCopyright"
        android:text="@string/eula" />

    <Button
        android:id="@+id/buttonUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:layout_constraintBottom_toTopOf="@+id/button_version_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textStyle="bold"
        android:text="@string/support_site_url" />

    <TextView
        android:id="@+id/textCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDbVer"
        android:text="@string/copyright" />

    <Button
        android:id="@+id/button_version_close"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="25dp"
        android:text="@android:string/VideoView_error_button" />

</android.support.constraint.ConstraintLayout>