<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/textViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/textTitle1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@color/colorSubtitleBar"
        android:text="@string/setting_title_datasource"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/setting_list_datasource"
        app:layout_constraintBottom_toTopOf="@+id/textDatasourceDescr"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textDatasourceDescr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/setting_descipt_datasource"
        app:layout_constraintBottom_toTopOf="@+id/textOption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textOption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorSubtitleBar"
        android:text="@string/setting_title_option"
        app:layout_constraintBottom_toTopOf="@+id/swKokuraShinZai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <Switch
        android:id="@+id/swKokuraShinZai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/setting_title_kokura_shinkansen"
        app:layout_constraintBottom_toTopOf="@+id/textDescrKokuraShinZai"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textDescrKokuraShinZai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/setting_descr_kokura_shinkansen"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swKokuraShinZai" />


</android.support.constraint.ConstraintLayout>